--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic&display=swap"
+      rel="stylesheet"
+    />
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <title>Contact</title>
